--- a/Code/View/view.storyboard.liquid
+++ b/Code/View/view.storyboard.liquid
@@ -12,7 +12,7 @@
         <!--{{ prefix }}{{ module_info.name }} View Controller-->
         <scene sceneID="2cH-70-FlM">
             <objects>
-                <viewController storyboardIdentifier="" id="nTq-cw-PKg" customClass="{{ prefix }}{{ module_info.name }}ViewController" customModule="" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="" id="nTq-cw-PKg" customClass="{{ prefix }}{{ module_info.name }}ViewController" customModule={% if module_info.project_targets and module_info.project_targets.size %}"{{ module_info.project_targets[0] }}"{% else %}""{% endif %} customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ham-5u-Ebq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,7 +22,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aqI-SS-yFs" sceneMemberID="firstResponder"/>
                 {% if custom_parameters.extended_configurator_create != 'true' %}
-                <customObject id="5Rv-JW-reY" customClass="{{ prefix }}{{ module_info.name }}ModuleInitializer" customModule="" customModuleProvider="target">
+                <customObject id="5Rv-JW-reY" customClass="{{ prefix }}{{ module_info.name }}ModuleInitializer" customModule={% if module_info.project_targets and module_info.project_targets.size %}"{{ module_info.project_targets[0] }}"{% else %}""{% endif %} customModuleProvider="target">
                     <connections>
                         <outlet property="{{ module_info.name | downcase }}ViewController" destination="nTq-cw-PKg" id="wJI-Bu-aoP"/>
                     </connections>
