--- a/Code/View/view_controller.xib.liquid
+++ b/Code/View/view_controller.xib.liquid
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="{{ prefix }}{{ module_info.name }}ViewController" customModule="" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="{{ prefix }}{{ module_info.name }}ViewController" customModule={% if module_info.project_targets and module_info.project_targets.size %}"{{ module_info.project_targets[0] }}"{% else %}""{% endif %} customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
@@ -20,7 +20,7 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </view>
         {% if custom_parameters.extended_configurator_create != 'true' %}
-        <customObject id="nNm-zZ-Ra0" customClass="{{ prefix }}{{ module_info.name }}ModuleInitializer" customModule="" customModuleProvider="target">
+        <customObject id="nNm-zZ-Ra0" customClass="{{ prefix }}{{ module_info.name }}ModuleInitializer" customModule={% if module_info.project_targets and module_info.project_targets.size %}"{{ module_info.project_targets[0] }}"{% else %}""{% endif %} customModuleProvider="target">
             <connections>
                 <outlet property="{{ module_info.name | downcase }}ViewController" destination="-1" id="OGX-iS-edC"/>
             </connections>
