--- a/Code/View/view_controller.tableview.swift.liquid
+++ b/Code/View/view_controller.tableview.swift.liquid
@@ -2,7 +2,7 @@
 
 import UIKit
 
-class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, {{ prefix }}{{module_info.name}}ViewInput {
+class {{ prefix }}{{ module_info.name }}ViewController: UIViewController {
 
     // MARK: - VIPER Vars
 
