--- a/Code/Interactor/interactor_input.swift.liquid
+++ b/Code/Interactor/interactor_input.swift.liquid
@@ -3,6 +3,6 @@
 import Foundation
 
 protocol {{ prefix }}{{ module_info.name }}InteractorInput: class {
-    {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig){% else %}func configure(){% endif %}
+    {% if custom_parameters.extended_configure %}func configure(with environment: {{ prefix }}{{ module_info.name }}ModuleInputEnvironment){% else %}func configure(){% endif %}
     func deinitialize()
 }
