--- a/Code/Presenter/module_output.swift.liquid
+++ b/Code/Presenter/module_output.swift.liquid
@@ -1,5 +1,13 @@
 {% include 'header' %}
 
 protocol {{ prefix }}{{ module_info.name }}ModuleOutput: class {
+    func {{ module_info.name[0] | downcase -}}
+    {%- assign myvariable_length = module_info.name | size | minus: 1 -%} 
+    {{- module_info.name | slice: 1, myvariable_length }}ModuleDidDeallocate(_ moduleInput: {{ prefix }}{{ module_info.name }}ModuleInput)
+}
 
+extension {{ prefix }}{{ module_info.name }}ModuleOutput {
+    func {{ module_info.name[0] | downcase -}}
+    {%- assign myvariable_length = module_info.name | size | minus: 1 -%} 
+    {{- module_info.name | slice: 1, myvariable_length }}ModuleDidDeallocate(_ moduleInput: {{ prefix }}{{ module_info.name }}ModuleInput) {}
 }
