--- a/Code/Interactor/interactor.cachetracker.swift.liquid
+++ b/Code/Interactor/interactor.cachetracker.swift.liquid
@@ -13,13 +13,27 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
 
     private var cacheTracker: CoreDataCacheTracker<{{ prefix }}{{ module_info.name }}ModuleDatabaseModel, {{ prefix }}{{ module_info.name }}ModuleEntityModel>?
     private var changes: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEntityModel>] = [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEntityModel>]()
-    {% if custom_parameters.extended_configure %}private var config: {{ prefix }}{{ module_info.name }}ModuleInputConfig!{% endif %}
+    {% if custom_parameters.extended_configure %}private var {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
+                                                            environment: {{ prefix }}{{ module_info.name }}ModuleInputEnvironment)!
+                                                            {%- else -%}
+                                                            config: {{ prefix }}{{ module_info.name }}ModuleInputConfig)!
+                                                            {%- endif -%}{%- endif %}
 
     // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
 
-    {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {
+    {% if custom_parameters.extended_configure %}func configure(with {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
+                                                                        environment: {{ prefix }}{{ module_info.name }}ModuleInputEnvironment)
+                                                                        {%- else -%}
+                                                                        config: {{ prefix }}{{ module_info.name }}ModuleInputConfig)
+                                                                        {%- endif -%}) {
+        assert(Thread.isMainThread)
+        if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
+        assert(self.environment == nil)
+        self.environment = environment
+        {%- else -%}
         assert(self.config == nil)
         self.config = config
+        {%- endif -%}
     }
     {% else %}func configure() {
         // TODO
@@ -38,6 +52,7 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
     }
 
     func startDeliveringModelsListChanges() {
+        assert(Thread.isMainThread)
         assert(cacheTracker == nil)
         let context: NSManagedObjectContext! = <nil> // TODO: Place UI coredata context here, e.g. NSManagedObjectContext.mr_default(), etc...
         cacheTracker = CoreDataCacheTracker<{{ prefix }}{{ module_info.name }}ModuleDatabaseModel, {{ prefix }}{{ module_info.name }}ModuleEntityModel>(context: context)
