--- a/Code/Presenter/presenter.mcflurry.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.swift.liquid
@@ -31,6 +31,9 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
             // TODO: Place your code here
         }
         state = .deinitialized
+        output?.{{ module_info.name[0] | downcase -}}
+                {%- assign myvariable_length = module_info.name | size | minus: 1 -%}
+                {{- module_info.name | slice: 1, myvariable_length }}ModuleDidDeallocate(self)
     }
 
     // MARK: - {% if custom_parameters.mcflurry_swift != "true" %}Rambler{% endif %}ViperModuleInput
